--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,10 +58,16 @@ body {
 }
 
 .title-section {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    
+    position: fixed;
+    font-size: 100px; 
+    top: 50%;
+    left: 50%;
+    transition: top 0.5s ease;
+}
+
+.title-section.fixed-top {
+    top: 0;
+    font-size: 30px;
 }
 
 .title-text {
@@ -70,13 +76,9 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: fixed;
     color: white;
-    font-size: 100px;
     font-family: 'outfit';
-    transform: translate(-50%,-125%);
     z-index: 2;
 }
 
@@ -92,8 +94,6 @@ body {
     rgb(255, 45, 45), rgb(241, 159, 241), rgb(131, 65, 179), rgb(85, 85, 241), rgb(85, 241, 85), yellow, orange,rgb(255, 45, 45));
     background-size: 200%;
     background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-background-clip: text;
     white-space: nowrap;
     animation: bg-pan 3s linear infinite;
 }
