--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,8 @@ body {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
-    filter: drop-shadow(0px 0px 20px #4e4e4e);}
+    filter: drop-shadow(0px 0px 20px #4e4e4e);
+}
 
 #triangle-container {
     position: fixed;
