updated style of triangle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ body {
 }
 
 #scroll-triangle {
-    filter: drop-shadow(0px 0px 20px #4e4e4e);
+    filter: drop-shadow(0px 0px 20px #5f5f5f);
 
     animation: fade-in-triangle 10s cubic-bezier(0.56, 0.44, 0.29, 1), jump-triangle 4s ease-in-out infinite;
     transition: 0.8s;
