--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -12,10 +12,24 @@ p {
     color: rgb(206, 206, 206);
 }
 
+li {
+
+}
+
 ul {
     color: rgb(153, 153, 153);
 }
 
 ol {
     color: rgb(209, 209, 209);
+}
+
+link {
+    color: white;
+}
+
+.icon_small {
+    height: 50px;
+    width: 50px;
+    margin-bottom: -10px;
 }
