--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,6 +104,7 @@ body {
     width: 100vw;
     height: 120px;
     bottom: 0;
+    background-image: linear-gradient(rgba(24, 26, 26, 0),  rgb(24, 26, 26));
 }
 
 .example-text {
