--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -29,3 +29,9 @@ link {
     width: 50px;
     margin-bottom: -10px;
 }
+
+.wavy-line {
+    stroke: #646464; 
+    stroke-width: 1px; 
+    fill: none; 
+}
