--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -2,7 +2,7 @@
     margin: 30px;
     outline: solid rgb(56, 56, 56);
     border-radius: 20px;
-    box-shadow: black;
+    box-shadow: 0px 0px 20px black;
     padding: 10px 10px 10px 20px;
 }
 
