--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -1,9 +1,11 @@
 .main {
+    background-color: rgba(24, 26, 26, 0.945) ;
     margin: 30px;
     outline: solid rgb(56, 56, 56);
     border-radius: 20px;
     box-shadow: 0px 0px 20px black;
     padding: 10px 10px 10px 20px;
+    z-index: 10;
 }
 
 #socials {
