--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,14 @@ html {
     font-family: 'outfit';
     scroll-behavior: smooth;
     color: white;
+    margin: 0px;
+    padding: 0px;
 }
 
 body {
     padding: 0px;
     background-color: rgb(24, 26, 26);
+    
 }
 
 .home {
@@ -114,3 +117,18 @@ body {
     justify-content: center;
 }
 
+.lines-image {
+    width: 100vw;
+    height: auto;
+    position: fixed; 
+    z-index: -10;
+    filter: brightness(20%);
+}
+
+.lines {
+    z-index: -3;
+    height: 100vh;
+    width: 100vw;
+    position: fixed;
+    background: radial-gradient( rgba(0,0,0,0),rgba(24, 26, 26, 1) 66%, rgba(24, 26, 26, 1));
+}
