--- a/assets/css/sections.css
+++ b/assets/css/sections.css
@@ -1,13 +1,41 @@
 .main {
-    background-color: rgba(24, 26, 26, 0.945) ;
+    background-color: rgba(24, 26, 26, 0.945);
     margin: 30px;
     outline: solid rgb(56, 56, 56);
     border-radius: 20px;
     box-shadow: 0px 0px 20px black;
     padding: 10px 10px 10px 20px;
-    z-index: 10;
+}
+
+.sections {
+    align-items: center;
+    justify-self:baseline; 
+    
+    ;
+}
+
+.section {
+    display: inline-block;
+    width: 300px;
+
+}
+
+.item {
+    display: block;
 }
 
 #socials {
-    width: 300px;
+
+}
+
+#games {
+
+}
+
+#gallery {
+
+}
+
+#others {
+
 }
