--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,17 +4,16 @@
 }
 
 html {
-    font-family: 'outfit';
     scroll-behavior: smooth;
-    color: white;
-    margin: 0px;
-    padding: 0px;
 }
 
 body {
+    color: white;
+    margin: 0px;
+    padding: 0px;
+    font-family: 'outfit';
     padding: 0px;
     background-color: rgb(24, 26, 26);
-    
 }
 
 .home {
@@ -34,6 +33,8 @@ body {
     justify-content: center;
     align-items: center;
     width: 100vw;
+    z-index: 2;
+
 }
 
 .title-section {
@@ -111,18 +112,14 @@ body {
     background-image: linear-gradient(rgba(24, 26, 26, 0),rgba(24, 26, 26, 0.884),rgb(24, 26, 26));
 }
 
-.example-text {
-    align-items: center;
-    display: flex;
-    justify-content: center;
-}
-
 .lines-image {
     width: 100vw;
     height: auto;
     position: fixed; 
     z-index: -10;
-    filter: brightness(20%);
+    filter: brightness(16%);
+    scale: 85%;
+    margin-top: -7.5%;
 }
 
 .lines {
@@ -130,5 +127,5 @@ body {
     height: 100vh;
     width: 100vw;
     position: fixed;
-    background: radial-gradient( rgba(0,0,0,0),rgba(24, 26, 26, 1) 66%, rgba(24, 26, 26, 1));
+    background: radial-gradient( rgba(0,0,0,0),rgba(24, 26, 26, 1) 60%,rgba(24, 26, 26, 1) 75%, rgba(24, 26, 26, 1));
 }
