removed unnecessary lines

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,7 @@ body {
 }
 
 #triangle-container {
+    z-index: 12;
     animation: fade-in .5s ease-in-out;
     position: fixed;
     align-items: center;
